--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <i class="fas fa-graduation-cap"></i>
                     </div>
                     <h3>Excelencia Académica</h3>
-                    <p>Nuestro plan de estudios está diseñado para inspirar la curiosidad intelectual y fomentar el pensamiento crítico.</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati recusandae corrupti doloribus.</p>
                 </div>
                 
                 <div class="tarjeta">
@@ -55,7 +55,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>Formación Integral</h3>
-                    <p>Desarrollamos competencias emocionales, sociales y éticas necesarias para el éxito en la vida.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae magnam beatae labore fugiat tempor.</p>
                 </div>
                 
                 <div class="tarjeta">
@@ -63,7 +63,7 @@
                         <i class="fas fa-globe-americas"></i>
                     </div>
                     <h3>Visión Global</h3>
-                    <p>Preparamos a nuestros estudiantes para ser ciudadanos globales con consciencia intercultural.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis sit beatae ex officia nihil accusantium assumenda.</p>
                 </div>
             </div>
         </div>
