--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecera">
-        <a href="#quienes-somos" class="logo">Chancones XD</a>
+        <a href="index.html" class="logo">Chancones XD</a>
         
         <div class="menu-icono fas fa-bars"></div>
         
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <!-- Seccion inicio  -->
+    <!-- sseccion inicio  -->
     <section class="banner">
         <div class="contenido-banner">
             <h1>Formando líderes del mañana</h1>
@@ -100,7 +100,7 @@
             </div>
         </div>
     </section>
-    <footer class="pie-pagina">
+    <footer class="footer">
         <p>2025 Todos los derechos reservados por Chancones XD.</p>
     </footer>
     <script src="js/script.js"></script>
