--- a/datos.html
+++ b/datos.html
@@ -194,7 +194,7 @@
     </div>
 
     <footer class="footer">
-        <p>2025 Todos los derechos reservados por Chancones XD.</p>
+        <p>© 2025 Todos los derechos reservados por Chancones XD.</p>
     </footer>
     
     <script src="js/registro.js"></script>
