--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
     </section>
     <footer class="footer">
-        <p>2025 Todos los derechos reservados por Chancones XD.</p>
+        <p>© 2025 Todos los derechos reservados por Chancones XD.</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
