--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="columna-imagen">
-                    <img src="img/image.jpg" alt="Estudiantes en el campus">
+                    <img src="img/image.webp" alt="Estudiantes en el campus">
                 </div>
             </div>
         </div>
