--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <header class="cabecera">
+    <header class="nav">
         <a href="index.html" class="logo">Chancones XD</a>
         
         <div class="menu-icono fas fa-bars"></div>
